--- a/css/popup.css
+++ b/css/popup.css
@@ -50,6 +50,7 @@ body {
 #main,
 #forgot_div,
 #add_account_div,
+#add_dtube_account_div,
 #master_check,
 #send_div,
 #acc_transfers,
@@ -168,7 +169,8 @@ input:focus {
 #edit_del_div input,
 #powerup_div input,
 #token_send_div input,
-#powerdown_div input {
+#powerdown_div input,
+#add_dtube_account_div input {
     width: 100%;
     box-sizing: border-box;
     height: 48.43px;
@@ -232,7 +234,8 @@ input:focus {
 #token_send_div button,
 #powerup_div button,
 #powerdown_div button,
-#confirm_send_div button {
+#confirm_send_div button,
+#add_dtube_account_div button {
     border-radius: 5px;
     width: 100%;
     height: 48.43px;
@@ -267,7 +270,8 @@ input:focus {
 #edit_del:hover,
 #vote_wit:hover,
 #token_send_div button:hover,
-#confirm_send_div button:hover {
+#confirm_send_div button:hover,
+#add_dtube_account_div button:hover {
     background-color: #917FC6;
     border: solid 1px #917FC6;
 }
@@ -371,7 +375,8 @@ input:focus {
 #incoming_del_div,
 #edit_del_div,
 #token_history_div,
-#confirm_send_div {
+#confirm_send_div,
+#add_dtube_account_div {
     display: none;
 }
 
@@ -591,12 +596,12 @@ input:focus {
     overflow: auto;
 }
 
-.custom-select-main .select-items div:last-of-type {
+.custom-select-main .select-items div:nth-last-of-type(-n+2) {
     padding-left: 20px !important;
     text-transform: uppercase;
 }
 
-.custom-select-main .select-items div:last-of-type::before {
+.custom-select-main .select-items div:nth-last-of-type(-n+2)::before {
     background-image: url("../images/plus.png");
     background-size: 16px 16px;
     background-repeat: no-repeat;
