--- a/css/popup.css
+++ b/css/popup.css
@@ -64,6 +64,7 @@ body {
 #witness_div,
 #delegation_div,
 #tokens_div,
+#rewards_div,
 #tokens_settings_div,
 #token_send_div,
 #powerup_div,
@@ -372,6 +373,7 @@ input:focus {
 #witness_div,
 #delegation_div,
 #tokens_div,
+#rewards_div,
 #token_send_div,
 #tokens_settings_div,
 #powerup_div,
@@ -1818,7 +1820,7 @@ input:focus {
     padding-bottom: 3px;
 }
 
-#tokens_div .back_enabled {
+#tokens_div .back_enabled, #rewards_div .back_enabled {
     width: 80%;
     display: inline-block;
     margin-bottom: 20px;
@@ -1831,18 +1833,20 @@ input:focus {
     margin-top: 15px;
 }
 
-#tokens_list {
+#tokens_list, #rewards_list {
     margin-top: 30px;
     margin-left: -32px;
     margin-right: -32px;
 }
 
 #tokens_list div:nth-of-type(even),
+#rewards_list div:nth-of-type(even),
 #list_incoming div:nth-of-type(even) {
     background-color: rgba(0, 156, 156, 0.8);
 }
 
 #tokens_list div:nth-of-type(odd),
+#rewards_list div:nth-of-type(odd),
 #list_incoming div:nth-of-type(odd) {
     background-color: rgba(0, 156, 156, 0.4);
 }
@@ -1852,26 +1856,31 @@ input:focus {
     width: 112px;
 }
 
-.row_token_balance span:last-of-type {
+.row_reward_balance span:first-of-type {
+    display: inline-block;
+    width: 140px;
+}
+
+.row_token_balance span:last-of-type,.row_reward_balance span:last-of-type {
     display: inline-block;
     width: 80px;
     text-align: right;
 }
 
-.row_token_balance img {
+.row_token_balance img,.row_reward_balance img {
     width: 20px;
     padding-left: 20px;
     vertical-align: -15%;
 }
 
-.row_token_balance {
+.row_token_balance, .row_reward_balance {
     padding-left: 32px;
     padding-right: 32px;
     padding-top: 11px;
     padding-bottom: 11px;
 }
 
-#tokens_div img {
+#tokens_div img , #rewards_div img{
     cursor: pointer;
 }
 
